fix positioning of permalink icons, but breaks the links

--- a/front_end/css/less/typography.less
+++ b/front_end/css/less/typography.less
@@ -194,7 +194,6 @@ a.definition:active {
 /* set markers & key-terms to Avenir Next Demi */
 .reg-section ol, dfn {
   .avenir-next-demi;
-  z-index: 100;
 }
 
 /* Set text regulation text to Georgia */
